payment-example-process-application/kube/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-example-process-application
  namespace: c8-payment-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-example-process-application
  template:
    metadata:
      labels:
        app: payment-example-process-application
    spec:
      containers:
      - name: payment-example-process-application
        image: ghcr.io/camunda-community-hub/camunda-8-examples/payment-example-process-application:8.8.0-SNAPSHOT
        ports:
        - containerPort: 8080
          name: http
        resources:
          limits:
            memory: "768Mi"
            cpu: "500m"
          requests:
            memory: "768Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 5
