payment-example-process-application/kube/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-example-process-application
  namespace: c8-payment-demo
spec:
  selector:
    app: payment-example-process-application
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
