payment-example-process-application/kube/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payment-ingress
  namespace: c8-payment-demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: your-host.dv
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: payment-example-process-application
            port:
              number: 8080
